--- a/overridingmodule/src/main/AndroidManifest.xml
+++ b/overridingmodule/src/main/AndroidManifest.xml
@@ -2,5 +2,6 @@
     package="com.khgkjg12.overriding.overridingmodule" >
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
 </manifest>
